syntax = "proto3";

package slave;

service ProtoService {
  rpc SendMessage (RequestMessage) returns (ResponseMessage) {}
}

message RequestMessage {
  string message = 1;
}

message ResponseMessage {
  string message = 1;
}